[gd_scene load_steps=6 format=3 uid="uid://dibh14f0arncu"]

[ext_resource type="Texture2D" uid="uid://tlvb3b3c432o" path="res://Assests/objetos/monedas/moneda.png" id="1_5nuiy"]
[ext_resource type="Script" path="res://Assests/interfaz/personaje/gui_gato.gd" id="1_8wl31"]
[ext_resource type="FontFile" uid="uid://mf1opp6a403y" path="res://Assests/fuentes/Daydream.ttf" id="3_2i8b5"]
[ext_resource type="Texture2D" uid="uid://clnlmlsm6gsgl" path="res://Assests/objetos/corazones/corazon.png" id="4_gtroa"]

[sub_resource type="LabelSettings" id="LabelSettings_kgpgu"]
font = ExtResource("3_2i8b5")
font_size = 28

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_8wl31")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(59, 42)
scale = Vector2(5.75, 5.75)
texture = ExtResource("1_5nuiy")
hframes = 13

[node name="moneda_label" type="Label" parent="."]
offset_left = 102.0
offset_top = 33.0
offset_right = 173.0
offset_bottom = 71.0
text = "X 0"
label_settings = SubResource("LabelSettings_kgpgu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = -2.0
offset_right = 308.0
offset_bottom = 38.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/TextureRect"]
position = Vector2(59, 131)
scale = Vector2(2.806, 2.812)
texture = ExtResource("4_gtroa")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/TextureRect2"]
position = Vector2(59, 131)
scale = Vector2(2.806, 2.806)
texture = ExtResource("4_gtroa")

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/TextureRect3"]
position = Vector2(59, 131)
scale = Vector2(2.806, 2.806)
texture = ExtResource("4_gtroa")
